# CAlokator

./: CMakeLists.txt  heap.c  heap.h  main.c  memmanager.c
